--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 </head>
 <body>
   <header>
-    
 <h1]vitao-[/h1]
-    
   </header>
 <div class="video-box">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kNJPalON82E"
-frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kNJPalON82E"frameborder="0" allowfullscreen></iframe>
 <div class="info">
 <h3>Título</h3>
 <p>Descrição breve do vídeo.</p>
