--- a/index.html
+++ b/index.html
@@ -7,20 +7,9 @@
 </head>
 <body>
   <header>
-<h1]vitao-[/h1]
+<h1>vitao-</h1>
   </header>
-<div class="video-box">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kNJPalON82E"frameborder="0" allowfullscreen></iframe>
-<div class="info">
-<h3>Título</h3>
-<p>Descrição breve do vídeo.</p>
-</div>
-</div>
-</body>
-</html>
-<header>
-<h1>ROBERTO-TELEFLIX</h1>
-</header>
+ 
 <nav>
 <ul>
 <li><a href="https://link1" target="_blank">Vídeo 1</a></li>
@@ -30,3 +19,13 @@
 <li><a href="https://link5" target="_blank">Vídeo 5</a></li>
 </ul>
 </nav>
+<div class="video-box">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kNJPalON82E"frameborder="0" allowfullscreen></iframe>
+<div class="info">
+<h3>Título</h3>
+<p>Descrição breve do vídeo.</p>
+</div>
+</div>
+</body>
+</html>
+
